--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fis-pure",
+  "name": "efis-pure",
   "version": "0.0.6",
   "description": "A pure front end module solution with modjs.",
   "main": "pure.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fex-team/fis-pure.git"
+    "url": "https://github.com/scottleo/fis-pure.git"
   },
   "keywords": [
     "fis"
