--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "efis-pure",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A pure front end module solution with modjs.",
   "main": "pure.js",
   "bin": {
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/scottleo/efis-pure.git"
+    "url": "https://github.com/scott-wong/efis-pure.git"
   },
   "keywords": [
     "fis"
   ],
-  "author": "scottleo",
+  "author": "scott-wong",
   "license": "BSD",
   "dependencies": {
-    "fis": "~1.7.8",
+    "fis": "~1.7.12",
     "fis-parser-utc": "0.0.2",
     "fis-parser-artc": "0.0.2",
     "fis-parser-less": "0.1.0",
