update fis to 1.8.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "efis-pure",
-  "version": "0.2.10",
+  "version": "0.2.11",
   "description": "A pure front end module solution with modjs.",
   "main": "pure.js",
   "bin": {
@@ -21,12 +21,12 @@
   "author": "scott-wong",
   "license": "BSD",
   "dependencies": {
-    "fis": "~1.7.14",
+    "fis": "~1.8.x",
     "fis-parser-artc": "0.0.x",
     "fis-parser-less": "0.1.x",
     "fis-parser-swig": "0.0.x",
     "fis-parser-utc": "0.0.x",
-    "fis-postprocessor-require-async": "0.0.8",
+    "fis-postprocessor-require-async": "0.0.x",
     "fis-postpackager-autoload": "0.0.x",
     "fis-postpackager-simple": "0.0.x",
     "fis-postpackager-html-minifier":"0.0.x",
