--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "efis-pure",
-  "version": "0.2.11",
+  "version": "0.2.13",
   "description": "A pure front end module solution with modjs.",
-  "main": "pure.js",
+  "main": "efis.js",
   "bin": {
-    "pure": "bin/pure",
-    "efis-pure": "bin/pure"
+    "efis": "bin/efis",
+    "efis-pure": "bin/efis"
   },
   "scripts": {
-    "uninstall": "node bin/pure server stop",
+    "uninstall": "node bin/efis server stop",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,12 +16,12 @@
     "url": "https://github.com/scott-wong/efis-pure.git"
   },
   "keywords": [
-    "fis"
+    "fis", "efis"
   ],
   "author": "scott-wong",
   "license": "BSD",
   "dependencies": {
-    "fis": "~1.8.x",
+    "fis": "1.8.x",
     "fis-parser-artc": "0.0.x",
     "fis-parser-less": "0.1.x",
     "fis-parser-swig": "0.0.x",
@@ -29,7 +29,7 @@
     "fis-postprocessor-require-async": "0.0.x",
     "fis-postpackager-autoload": "0.0.x",
     "fis-postpackager-simple": "0.0.x",
-    "fis-postpackager-html-minifier":"0.0.x",
+    "fis-postpackager-html-minifier": "0.0.x",
     "fis-lint-jshint": "0.0.x"
   }
 }
